--- a/src/main/resources/assets/touhouorigins/lang/fi_fi.json
+++ b/src/main/resources/assets/touhouorigins/lang/fi_fi.json
@@ -241,7 +241,32 @@
   "power.touhouorigins.crude_appetite.name": "Raaka ruokahalu",
   "power.touhouorigins.crude_appetite.description": "Nautit raa'an lihan mausta, se on melkein yhtä hyvää kuin elävän ihmisen syöminen! Raakalihan syöminen antaa 75% enemmän nälkäpisteitä, kun taas kaikki muut ruoat antavat 50% vähemmän.",
   "power.touhouorigins.mysterious_seal.name": "Salaperäisesti sinetöity",
-  "power.touhouorigins.mysterious_seal.description": "Tuntematon sinetti ympäröi kehoasi ja sieluasi. Sinulla on 5 sydäntä vähemmän elinvoimaa ja olet 20% pienempi. Ehkä on olemassa jokin keino murtaa se?",
+  "power.touhouorigins.mysterious_seal.description": "Salaperäinen sinetti ympäröi kehoasi ja sieluasi. Sinulla on 5 sydäntä vähemmän elinvoimaa ja olet 20% pienempi. Ehkä on olemassa jokin keino murtaa se?",
+
+  "origin.touhouorigins.kurayami_ex.name": "EX-Kurayami",
+  "origin.touhouorigins.kurayami_ex.description": "Sinuun asetettu salaperäinen sinetti on ylikuormittunut, ja yhteytesi siihen on tilapäisesti katkennut. Olet nyt paljon voimakkaampi, mutta sinulla on sammumaton verenhimo!",
+  "origin.touhouorigins.kurayami_ex.announcement_active": "Tunnet tyydyttämätöntä nälkää, joka ylittää sinettisi vaikutuksen sinuun. Vahvuus. Epätoivo. Voima. Tämä on todellinen muotosi!",
+  "origin.touhouorigins.kurayami_ex.announcement_inactive": "Sinetti saa sinut takaisin hallintaansa. Tunnet itsesi heikoksi ja hämmentyneeksi, etkä pysty muistamaan viimeaikaisia tapahtumia. \"Mitä tapahtuikaan?\"",
+  "origin.touhouorigins.kurayami_ex.announcement_time_limit": "Sinetin voima alkaa vahvistaa vaikutusvaltaansa sinuun. Et voi enää pidentää aikarajaasi tässä muodossa!",
+
+  "power.touhouorigins.nullified_seal.name": "Olen... Nälkäinen...",
+  "power.touhouorigins.nullified_seal.description": "Tämä alkuperäpäivitys päättyy 10 minuutin kuluttua tai jos kuolet. Oranssina hehkuvien pelaajien tappaminen voi pidentää tätä ajastinta enintään 60 minuuttiin. Kun se päättyy, palaat alkuperäiseen muotoosi heikentyneenä.",
+  "power.touhouorigins.darkness_sword.name": "Pidätkö miekastani?",
+  "power.touhouorigins.darkness_sword.description": "Lähitaisteluaseen heilauttaminen 30 sekunnin välein hyökkäysalueen ulkopuolella olevaa oliota tai pelaajaa kohti teleporttaa sinut heidän luokseen, aiheuttaa jonkin verran vahinkoa ja sokaisee heidät.",
+  "power.touhouorigins.power_of_darkness.name": "Kohtalo ja tuho",
+  "power.touhouorigins.power_of_darkness.description": "Jos hyökkäät toista oliota tai pelaajaa vastaan millä tahansa lähitaisteluaseella, on hyvin pieni mahdollisuus tappaa hänet välittömästi. Aseet, joilla on korkeampi lumouskyky, laukaisevat tämän vaikutuksen todennäköisemmin.",
+  "power.touhouorigins.saint_in_darkness.name": "Pyhimys pimeydessä",
+  "power.touhouorigins.saint_in_darkness.description": "Säilytät kaikki alkuperäisen alkuperäsi voimien kyvyt, eivätkä näiden voimien negatiiviset vaikutukset enää vaikuta sinuun.",
+
+  "origin.touhouorigins.tsukumogami.name": "Tsukumogami",
+  "origin.touhouorigins.tsukumogami.description": "Tsukumogamit ovat hylättyjen työkalujen tai esineiden henkiä, jotka heräävät henkiin kostaakseen niille, jotka ovat kohdelleet heitä kaltoin. Useimpien tsukumogamien tiedetään olevan pahansuopia ihmisiä kohtaan, vaikka niiden todellinen vaarallisuus riippuu yleensä siitä, miten niitä käytettiin ja kohdeltiin ennen hylkäämistä.",
+
+  "power.touhouorigins.choose_your_tool.name": "Sinä työkalu",
+  "power.touhouorigins.choose_your_tool.description": "Olet kirjaimellisesti työväline, ainakaan sinun ei tarvitse näyttää siltä. Kun olet valinnut tämän alkuperän, sinua pyydetään valitsemaan esine, jota asutat. Tähän esineeseen liittyy erityinen kyky, joka on sidoksissa sinuun, eikä se voi rikkoutua. Sinun on pidettävä sitä aina mukanasi.",
+  "power.touhouorigins.artisan_of_animacy.name": "Elämyksen käsityöläinen",
+  "power.touhouorigins.artisan_of_animacy.description": "Olet omistautunut käsityöllesi ja voit antaa muuten arkipäiväisille esineille aaveellisia ominaisuuksia, jolloin ne ovat voimakkaampia, mutta vähemmän eläviä. Takomispöydän käyttäminen hiipimisen aikana antaa hallussapidettävälle esineellesi satunnaisen sovellettavan lumouksen sekä katoamisen kirouksen.",
+  "power.touhouorigins.little_smithy.name": "Pieni paja",
+  "power.touhouorigins.little_smithy.description": "Työkalut ja taonta kulkevat käsi kädessä, ja seppä sinä oletkin. Osaat valmistaa erilaisia esineitä, joita ei normaalisti voi valmistaa.",
 
   "touhouorigins.subtitles.entity.fairy.heal": "Keiju elpyy",
   "touhouorigins.subtitles.entity.fairy.fly": "Keiju lepattaa",
@@ -267,6 +292,12 @@
   "touhouorigins.subtitles.entity.kurayami.flight": "Kurayami humahtaa",
   "touhouorigins.subtitles.entity.kurayami.darkness": "Pimeys kerääntyy",
   "touhouorigins.subtitles.entity.kurayami.chomp": "Kurayami puree",
+  "touhouorigins.subtitles.entity.fukuro.gap_upgrade": "Pussi repeää",
+  "touhouorigins.subtitles.entity.fukuro.bag_open": "Pussi aukeaa",
+  "touhouorigins.subtitles.entity.exfukuro.bag_open": "Aukko aukeaa",
+  "touhouorigins.subtitles.entity.karakasa.escape": "Karakasa humahtaa",
+  "touhouorigins.subtitles.entity.menreiki.swap": "Vaihtaa maskin",
+  "touhouorigins.subtitles.entity.menreiki.thorns": "Vahinko heijastuu",
 
   "death.attack.sun": "%1$s höyrystyi",
   "death.attack.sun.player": "%1$s höyrystyi taistellessaan pelaajaa %2$s vastaan",
@@ -276,6 +307,8 @@
   "death.attack.fireThorns.item": "%1$s poltti kätensä taistellessaan %3$s käyttävää pelaajaa %2$s vastaan",
   "death.attack.chomp": "%2$s söi %1$s",
   "death.attack.chomp.item": "%2$s söi %1$s käyttäessään %3$s",
+  "death.attack.erase": "%1$s poistettiin tästä maailmasta",
+  "death.attack.erase.player": "%1$s poistettiin tästä maailmasta pelaajan %2$s toimesta",
 
   "power.touhouorigins.recollection.player": "%1$s omistaa seuraavat muistot...",
   "power.touhouorigins.recollection.spawnX": "Uudelleensyntymis X",
@@ -287,6 +320,59 @@
   "power.touhouorigins.ostracized.trade": "%1$s kieltäytyy vaihtamasta kanssasi",
   "power.touhouorigins.my_apocalypse_alert": "Totaalinen ytimen sulaminen käynnissä... Evakuoikaa alue!",
   "power.touhouorigins.midnight_bird_cooldown": "Toivut yhä loukkaantumisestasi!",
+  "power.touhouorigins.menreiki_kitsune": "Kitsune",
+  "power.touhouorigins.menreiki_fuku_no_kami": "Fuku no kami",
+  "power.touhouorigins.menreiki_uba": "Uba",
 
-  "touhouorigins.gui.badge.upgrade": "Päivityspolku"
+  "item.touhouorigins.tsukumogami_chochin_name": "Chōchin",
+  "item.touhouorigins.tsukumogami_fukuro_name": "Fukuro",
+  "item.touhouorigins.tsukumogami_fukuro_ex_name": "EX-Fukuro",
+  "item.touhouorigins.tsukumogami_karakasa_name": "Karakasa",
+  "item.touhouorigins.tsukumogami_menreiki_kitsune_name": "Kitsune maski",
+  "item.touhouorigins.tsukumogami_menreiki_fuku_no_kami_name": "Fuku no kami maski",
+  "item.touhouorigins.tsukumogami_menreiki_uba_name": "Uba maski",
+  "item.touhouorigins.tsukumogami_bound_one": "Tämä esine on osa olemustasi,",
+  "item.touhouorigins.tsukumogami_bound_two": "sitä ei voi pudottaa tai säilyttää",
+  "item.touhouorigins.tsukumogami_bound_three": "ulkoisissa tavaraluetteloissa.",
+
+  "touhouorigins.gui.badge.upgrade": "Päivityspolku",
+
+  "layer.touhouorigins.tsukumogami_tool.name": "Tsukumogami",
+  "layer.touhouorigins.tsukumogami_tool.missing_origin.name": "Tuntematon",
+  "layer.touhouorigins.tsukumogami_tool.missing_origin.description": "Et ole vielä tunnistautunut.",
+
+  "origin.touhouorigins.tsukumogami_chochin.name": "Chōchin",
+  "origin.touhouorigins.tsukumogami_chochin.description": "Henkesi ilmentymä on lyhty, joka loistaa aina yhtä kirkkaasti.",
+
+  "power.touhouorigins.tsukumogami_chochin.name": "Valo pimeydessä",
+  "power.touhouorigins.tsukumogami_chochin.description": "Kun pidät sitä kädessäsi, sinulla on hämäränäkö ja hehkuminen, jolloin muut lähellä olevat voivat nähdä sinut seinien läpi. Olet myös immuuni sokeutumisvaikutuksille.",
+
+  "origin.touhouorigins.tsukumogami_fukuro.name": "Fukuro",
+  "origin.touhouorigins.tsukumogami_fukuro.description": "Henkesi ilmentymä on melko tavanomainen pussukka. Ainakin se on kätevä.",
+  "origin.touhouorigins.tsukumogami_fukuro.announcement": "Tuijotat tyhjyyteen, ja osa sielustasi repeää, kun tuhannet silmät tuijottavat takaisin. Tunsit kaiken ja sitten et mitään.",
+
+  "power.touhouorigins.tsukumogami_fukuro.name": "Pienet aarteet",
+  "power.touhouorigins.tsukumogami_fukuro.description": "Kun pidät sitä kädessäsi tai päässäsi, sinulla on käytössäsi toissijainen tavaraluettelo, jossa on yhdeksän paikkaa. Tämä varasto on sidottu sieluusi, eikä se putoa kuollessasi.",
+
+  "power.touhouorigins.tsukumogami_fukuro_ex.name": "Rajojen ylittäminen",
+  "power.touhouorigins.tsukumogami_fukuro_ex.description": "Muut ovat vaikuttuneita kätevyydestäsi, mutta entä jos voisit säilyttää vielä enemmän? Halutessasi voit käyttää ender-silmää fukurosi manipuloimiseen. Jos teet sen, menetät pääsyn toissijaiseen tavaraluetteloosi, mutta voit sen sijaan käyttää ender-arkkuvarastoasi milloin tahansa. Tätä vaikutusta ei voi peruuttaa.",
+  "origin.touhouorigins.tsukumogami_fukuro.info": "Aktivoi tämä päivityspolku painamalla ja pitämällä painettuna ensisijaista kykynäppäintäsi ender-silmä kädessäsi.",
+
+  "origin.touhouorigins.tsukumogami_fukuro_ex.name": "EX-Fukuro",
+  "origin.touhouorigins.tsukumogami_fukuro_ex.description": "Fukurosi on nyt oudolla voimalla varustettu portti omituiseen ulottuvuuteen, jonka avulla voit säilyttää sen sisällä monia muita esineitä.",
+
+  "power.touhouorigins.gap_bag.name": "Aukko pussi",
+  "power.touhouorigins.gap_bag.description": "Kun pidät sitä kädessäsi tai päässäsi, pääset milloin tahansa käsiksi ender-arkkuusi.",
+
+  "origin.touhouorigins.tsukumogami_karakasa.name": "Karakasa",
+  "origin.touhouorigins.tsukumogami_karakasa.description": "Henkesi ilmentymä on pieni sateenvarjo, ketterä ja ohikiitävä.",
+
+  "power.touhouorigins.tsukumogami_karakasa.name": "Siro pieni aurinkovarjo",
+  "power.touhouorigins.tsukumogami_karakasa.description": "Kun pidät sitä kädessäsi, saat hitaan putoamisen. Karakasalla hyökkääminen muiden olioiden kimppuun lennättää sinut ilmaan, mikä mahdollistaa nopean pakenemisen.",
+
+  "origin.touhouorigins.tsukumogami_menreiki.name": "Menreiki",
+  "origin.touhouorigins.tsukumogami_menreiki.description": "Henkesi ilmenee naamioiden kokoelmana, joka palaa tunteella.",
+
+  "power.touhouorigins.tsukumogami_menreiki.name": "Toiveikas naamiainen",
+  "power.touhouorigins.tsukumogami_menreiki.description": "Kun pidät sitä päässäsi, voit vaihdella kolmen tunnetilan välillä:\nKitsune:\nKaikki, joita katsot suoraan, hehkuvat, jolloin voit seurata heidän sijaintiaan maastojen läpi.\nFuku no kami:\nSinuun kohdistuvat positiiviset vaikutukset kestävät kauemmin, kun taas neutraalit ja negatiiviset vaikutukset häviävät nopeammin.\nUba:\nKun sinua vastaan hyökätään, heijastat osan vahingosta takaisin hyökkääjääsi päin, samaan tapaan kuin jos sinulla olisi piikikkyys."
 }
