Tsukumogami: -Artisan of Animacy has been tweaked. You must now have a certain ingredient item in your offhand to imbue your equipment, in exchange, more powerful enchantments are now possible: --Tier 1 (level 5-15): 4 coal OR 4 feathers --Tier 2 (level 16-20): 4 nether quartz OR 4 glowing inc sacks --Tier 3 (level 21-30): 4 amethyst shards OR 4 phantom membranes (these material types/amounts may or may not change as more specific enchantment combinations are added in the future.)
-Horse armor can now be enchanted via Artisan of Animacy (currently only feather falling and thorns are valid possibilities)

Kurayami:
-can now avoid darkness debuff in the Nether with fire protection armor or fire resistance potion buffs.
-Ex-Kurayami is now properly undocumented.

Crow Tengu:
-"Heavy" armor restrictions are more restricted for modded armors (if there is an armor from another mod you feel crow tengu should be able to wear, but can't, let us know)

Misc:
Language file has been updated for Kurayami and Tsukumogami, non-english translations are no longer up-to date for these origins.

--- a/src/main/resources/assets/touhouorigins/lang/en_us.json
+++ b/src/main/resources/assets/touhouorigins/lang/en_us.json
@@ -228,45 +228,45 @@
   "power.touhouorigins.mirror_movement.description": "",
 
   "origin.touhouorigins.kurayami.name": "Kurayami",
-  "origin.touhouorigins.kurayami.description": "Kurayami are a category of wicked youkai capable of manipulating darkness. Although they are known to devour humans, most kurayami are susceptible to their own powers and are too simple-minded to commit such acts. It's thought that these youkai were once very strong creatures whose true powers vanished long ago.",
+  "origin.touhouorigins.kurayami.description": "A category of wicked youkai capable of manipulating darkness. Although known for devouring humans, most are susceptible to their own powers and lack the complexity to carry out such acts. It is thought that these youkai were once formidable foes whose true powers vanished long ago.",
 
   "power.touhouorigins.midnight_bird.name": "Midnight Bird",
   "power.touhouorigins.midnight_bird.description": "You have the ability to soar like a bird but will fall if hurt. You can float in place by sneaking.",
   "power.touhouorigins.is_that_so.name": "So Nanoka~?",
-  "power.touhouorigins.is_that_so.description": "Every 30 seconds, you can spend some hunger points to release a cloud of darkness that will extinguish and blind everyone nearby for 5 seconds including yourself.",
+  "power.touhouorigins.is_that_so.description": "Every 30 seconds, you can spend hunger points to release a darkness cloud, extinguishing and blinding everyone nearby, including yourself, for 5 seconds.",
   "power.touhouorigins.chomp.name": "Chomp!",
-  "power.touhouorigins.chomp.description": "You can chomp on any fleshy mob or player under the effects of \"So Nanoka~?\" by attacking with your bare fists. If they are a valid target, chomped victims will directly lose 2 hearts of health and you will be given 4 absorption hearts. If the victim is killed, your hunger points and health will also be completely restored.",
+  "power.touhouorigins.chomp.description": "You can chomp on any fleshy mob or player under the effects of \"So Nanoka~?\" with bare fists. Valid victims will lose 2 hearts of health while you gain 4 absorption hearts. If the victim is killed, your hunger and health is completely restored.",
   "power.touhouorigins.light_absorption.name": "Light Absorption",
-  "power.touhouorigins.light_absorption.description": "You hate being exposed to the sun and heat, and subconsciously surround yourself in darkness to cool off. When exposed to direct sunlight or in the Nether, you are afflicted with darkness. Others will see you as a black sphere in this state.",
+  "power.touhouorigins.light_absorption.description": "You despise being exposed to sunlight and heat, and subconsciously surround yourself in darkness to cool off. When exposed to direct sunlight or in the Nether, you are afflicted with darkness, appearing as a black sphere to others. This can be mitigated in the Nether with fire protection.",
   "power.touhouorigins.crude_appetite.name": "Crude Appetite",
   "power.touhouorigins.crude_appetite.description": "You relish the taste of raw meat, it's almost as good as eating a live human! Eating raw meat gives 75% more hunger points, while all other foods give 50% less.",
   "power.touhouorigins.mysterious_seal.name": "Mysteriously Sealed",
-  "power.touhouorigins.mysterious_seal.description": "An unknown seal envelops your body and soul. You have 5 less hearts of health, are 20% smaller, and are weak to fire-based damage. Perhaps there is some way to disrupt it?",
+  "power.touhouorigins.mysterious_seal.description": "An unknown seal envelops your body and soul. You have 5 less hearts of health, are 20% smaller, and are weak to heat-based damage.",
 
   "origin.touhouorigins.kurayami_ex.name": "EX-Kurayami",
-  "origin.touhouorigins.kurayami_ex.description": "The mysterious seal placed onto you is overloaded, temporarily breaking your attunement to it. You are now much more powerful, but have an insatiable bloodlust!",
-  "origin.touhouorigins.kurayami_ex.announcement_active": "You feel an insatiable hunger that overpowers your seal's influence on you. Strength. Despair. Power. This is your true form!",
-  "origin.touhouorigins.kurayami_ex.announcement_inactive": "The seal regains its control over you. You feel weak and confused, unable to recall your recent events. \"What happened again?\"",
-  "origin.touhouorigins.kurayami_ex.announcement_time_limit": "The seal's power begins to strengthen its influence on you. You can no longer extend your time limit in this form!",
+  "origin.touhouorigins.kurayami_ex.description": "The mysterious seal on you shatters, temporarily breaking your attunement to it. You now wield immense power, but have an insatiable bloodlust!",
+  "origin.touhouorigins.kurayami_ex.announcement_active": "You embrace the insatiable hunger that surpasses your seal's influence on you. Strength, despair, power—this is your true form!",
+  "origin.touhouorigins.kurayami_ex.announcement_inactive": "The seal regains control, leaving you weak and confused. You struggle to recall recent events. \"What happened again?\"",
+  "origin.touhouorigins.kurayami_ex.announcement_time_limit": "The seal's power intensifies, tightening its influence on you. You can no longer extend your time limit in this form!",
 
   "power.touhouorigins.nullified_seal.name": "I'm... Hungry...",
   "power.touhouorigins.nullified_seal.description": "This origin upgrade will expire after 10 minutes or if you die. Killing players that are glowing orange can extend this timer up to a maximum of 60 minutes. Once it expires, you will revert back to your original form in a weakened state.",
   "power.touhouorigins.darkness_sword.name": "Do You Like, My Sword~?",
-  "power.touhouorigins.darkness_sword.description": "Every 30 seconds, swinging a melee weapon at a mob or player that is out of attack range will teleport you to them, dealing some damage and blinding them.",
+  "power.touhouorigins.darkness_sword.description": "Every 30 seconds, swinging a melee weapon at a mob or player beyond your reach teleports you to them, inflicting damage and causing temporary blindness.",
   "power.touhouorigins.power_of_darkness.name": "Fate and Destruction",
-  "power.touhouorigins.power_of_darkness.description": "Attacking another mob or player with any melee weapon has a very small chance to instantly kill them. Weapons with higher enchantibility are more likely to trigger this effect.",
+  "power.touhouorigins.power_of_darkness.description": "Attacking another mob or player with melee weapons have a small chance to instantly kill them. Weapons with higher enchantibility are more likely to trigger this effect.",
   "power.touhouorigins.saint_in_darkness.name": "Saint in Darkness",
   "power.touhouorigins.saint_in_darkness.description": "You retain all abilities of your original origin's powers, and are no longer affected by the negative effects of those powers.",
 
   "origin.touhouorigins.tsukumogami.name": "Tsukumogami",
-  "origin.touhouorigins.tsukumogami.description": "Tsukumogami are sentient spirits of abandoned tools or objects that animate to take vengeance on those who have mistreated and neglected them. Most tsukumogami are known to be spiteful towards humans, though their true dangerousness typically depends on how they were used and treated before being abandoned.",
+  "origin.touhouorigins.tsukumogami.description": "Tsukumogami are sentient spirits born from abandoned tools or objects. While most are known to spite humans, the level of danger they pose typically depends on the treatment they received before becoming sentient beings.",
 
   "power.touhouorigins.choose_your_tool.name": "You Tool",
-  "power.touhouorigins.choose_your_tool.description": "You are a tool, literally, at least you don't have to look like one. After choosing this origin, you will be prompted to choose the object you inhabit. This object will have a special ability associated to it, is bound to you, and cannot break. You must carry it at all times.",
+  "power.touhouorigins.choose_your_tool.description": "Despite literally being a tool, you have the advantage of not necessarily resembling one. Choosing this origin prompts you to select an object to inhabit, which grants a unique ability, cannot break, and must be carried at all times.",
   "power.touhouorigins.artisan_of_animacy.name": "Artisan of Animacy",
-  "power.touhouorigins.artisan_of_animacy.description": "You are devoted to your craft and can imbue otherwise mundane objects with phantasmic characteristics, making them more powerful at the expense of being more alive. Using a smithing table while sneaking will give your held item a random applicable enchantment along with curse of the vanishing.",
+  "power.touhouorigins.artisan_of_animacy.description": "Your devotion to your craft allows you to enchant mundane objects, giving them power at the expense of imbuing them with life. Using a smithing table while sneaking and holding both a tool and a valid ingredient grants your tool an applicable enchantment, along with the curse of vanishing. You can create a guidebook by using a book on a smithing table.",
   "power.touhouorigins.little_smithy.name": "Little Smithy",
-  "power.touhouorigins.little_smithy.description": "Tools and smithing go hand to hand, and a smith you are. You have knowledge to craft various items that are normally uncraftable.",
+  "power.touhouorigins.little_smithy.description": "As a master smith, you possess the skill to forge unique items that would otherwise be impossible to create.",
 
   "touhouorigins.subtitles.entity.fairy.heal": "Fairy regenerates",
   "touhouorigins.subtitles.entity.fairy.fly": "Fairy flutters",
@@ -334,6 +334,14 @@
   "item.touhouorigins.tsukumogami_bound_one": "This item is a part of your being,",
   "item.touhouorigins.tsukumogami_bound_two": "you cannot drop it or store it",
   "item.touhouorigins.tsukumogami_bound_three": "in any external inventories.",
+
+  "item.touhouorigins.artisan_of_animacy_book_title": "Artistic Animacy",
+  "item.touhouorigins.artisan_of_animacy_book_author": "a cheery forgotten Karakasa",
+  "item.touhouorigins.artisan_of_animacy_book_text_one": "Welcome to Artistic Animacy!",
+  "item.touhouorigins.artisan_of_animacy_book_text_two": "\nA not-so- comprehensive enchanting guide that unveils the art of transmutating humble ingredients to forge extraordinary, sentient tools.\n\nLets begin!",
+  "item.touhouorigins.artisan_of_animacy_book_text_three": "Chaotic Kami:",
+  "item.touhouorigins.artisan_of_animacy_book_text_four": "\nEmbrace the unpredictability of life as a beginner in the craft. With just these simple ingredients, all order gives way to complete randomness. Welcome to the realm of chaos!\n",
+  "item.touhouorigins.artisan_of_animacy_book_text_five": "\n4 coal OR 4 feathers create:\nBasic Kami\n\n4 nether quartz OR 4 glowing inc sacks create:\nIntermediate Kami\n\n4 amethyst shards OR 4 phantom membranes create:\nComplex Kami",
 
   "touhouorigins.gui.badge.upgrade": "Upgrade path",
 
