--- a/src/main/resources/assets/touhouorigins/lang/en_us.json
+++ b/src/main/resources/assets/touhouorigins/lang/en_us.json
@@ -89,7 +89,7 @@
   "power.touhouorigins.tengu_speed.name": "Tengu's Speed",
   "power.touhouorigins.tengu_speed.description": "As a tengu, you are naturally faster than a regular person.",
   "power.touhouorigins.flight_friendly_body.name": "Flight-Friendly Body",
-  "power.touhouorigins.flight_friendly_body.description": "You have lighter bones and a slender build, and so have 3 less hearts of health and cannot wear heavy armor.",
+  "power.touhouorigins.flight_friendly_body.description": "You have a slender build, and so have 3 less hearts of health and cannot wear heavy armor.",
   "power.touhouorigins.reporting_above_clouds.name": "Reporting Above Clouds",
   "power.touhouorigins.reporting_above_clouds.description": "It's in your nature to explore the world and write down all the strange happenings all around, you have no time to tussle with others and hunt. All of your damage is cut in half.",
 
