Re-add the tengu

--- a/src/main/resources/assets/touhouorigins/lang/en_us.json
+++ b/src/main/resources/assets/touhouorigins/lang/en_us.json
@@ -73,10 +73,36 @@
   "power.touhouorigins.vengeful_spirit/searing_rage.name": "Searing Rage",
   "power.touhouorigins.vengeful_spirit/searing_rage.description": "The lower your health is, the more melee damage you deal. Opponents that strike you with melee will occasionally take fire damage.",
 
+  "origin.touhouorigins.crow_tengu.name": "Crow Tengu",
+  "origin.touhouorigins.crow_tengu.description": "A tengu is a form of youkai common in Japanese mythology. The crow tengu are similar to anthropomorphic crows with a humanoid body structure.",
+
+  "power.touhouorigins.crow_tengu/gust_of_wind.name": "Gust of Wind",
+  "power.touhouorigins.crow_tengu/gust_of_wind.description": "You can unleash the power of the wind to launch yourself in the direction you're looking.",
+  "power.touhouorigins.crow_tengu/youkai_of_the_sky.name": "Youkai of the Sky",
+  "power.touhouorigins.crow_tengu/youkai_of_the_sky.description": "You have elytra flight without needing to equip any elytra.",
+  "power.touhouorigins.crow_tengu/flight_friendly_body.name": "Flight-Friendly Body",
+  "power.touhouorigins.crow_tengu/flight_friendly_body.description": "You have 3 less hearts of health and cannot wear heavy armor.",
+  "power.touhouorigins.crow_tengu/reporting_above_clouds.name": "Reporting Above Clouds",
+  "power.touhouorigins.crow_tengu/reporting_above_clouds.description": "All of your damage is cut in half.",
+
+  "origin.touhouorigins.wolf_tengu.name": "Wolf Tengu",
+  "origin.touhouorigins.wolf_tengu.description": "White Wolf Tengu are the \"mountain's defense force\", responsible for keeping out intruders.",
+
+  "power.touhouorigins.wolf_tengu/warrior_spirit.name": "Warrior's Spirit",
+  "power.touhouorigins.wolf_tengu/warrior_spirit.description": "You can activate this power to gain Strength III for 10 seconds.",
+  "power.touhouorigins.wolf_tengu/mountainous_blades.name": "Mountainous Blades",
+  "power.touhouorigins.wolf_tengu/mountainous_blades.description": "All swords swing 30% slower, but your reach when using them is increased by 1 block.",
+  "power.touhouorigins.wolf_tengu/clumsy_archer.name": "Clumsy Archer",
+  "power.touhouorigins.wolf_tengu/clumsy_archer.description": "You are less accurate with a bow.",
+  "power.touhouorigins.wolf_tengu/big_appetite.name": "Big Appetite",
+  "power.touhouorigins.wolf_tengu/big_appetite.description": "Food is half as nourishing.",
+
   "power.touhouorigins.common/apparition_appetite.name": "Apparition's Appetite",
   "power.touhouorigins.common/apparition_appetite.description": "You do not require food to stay alive.",
   "power.touhouorigins.common/futile_concoctions.name": "Futile Concoctions",
   "power.touhouorigins.common/futile_concoctions.description": "You are unable to drink potions.",
+  "power.touhouorigins.common/tengu_speed.name": "Tengu's Speed",
+  "power.touhouorigins.common/tengu_speed.description": "You are naturally faster than a regular person.",
 
   "touhouorigins.subtitles.origin.fairy.heal": "Fairy regenerates",
   "touhouorigins.subtitles.origin.fairy.fly": "Fairy flutters",
@@ -87,24 +113,9 @@
   "touhouorigins.subtitles.origin.satori.close_eye": "Third eye closes",
   "touhouorigins.subtitles.origin.generic.gust": "Wind rushes",
   "touhouorigins.subtitles.origin.wolf_tengu.growl": "Wolf Tengu growls",
-  "touhouorigins.subtitles.origin.celestial.evolve": "Celestial evolves",
-  "touhouorigins.subtitles.origin.celestial.divinity_restore": "Divinity restores",
-  "touhouorigins.subtitles.origin.celestial.divinity_deplete": "Divinity depletes",
   "touhouorigins.subtitles.origin.vengeful_spirit.heal": "Vengeful Spirit regenerates",
   "touhouorigins.subtitles.origin.rabbit.hop": "Rabbit hops",
   "touhouorigins.subtitles.origin.moon_rabbit.activate": "Moon Rabbit prepares to fire",
-  "touhouorigins.subtitles.origin.hell_raven.decay": "Decay fills",
-  "touhouorigins.subtitles.origin.hell_raven.alert": "Alarm blares",
-  "touhouorigins.subtitles.origin.hell_raven.shoot": "Hell Raven shoots",
-  "touhouorigins.subtitles.origin.kurayami.flight": "Kurayami whooshes",
-  "touhouorigins.subtitles.origin.kurayami.darkness": "Darkness gathers",
-  "touhouorigins.subtitles.origin.kurayami.chomp": "Kurayami chomps",
-  "touhouorigins.subtitles.origin.fukuro.gap_upgrade": "Pouch tears",
-  "touhouorigins.subtitles.origin.fukuro.bag_open": "Pouch opens",
-  "touhouorigins.subtitles.origin.exfukuro.bag_open": "Gap opens",
-  "touhouorigins.subtitles.origin.karakasa.escape": "Karakasa whooshes",
-  "touhouorigins.subtitles.origin.menreiki.swap": "Swaps mask",
-  "touhouorigins.subtitles.origin.menreiki.thorns": "Damage reflects",
 
   "death.attack.sun": "%1$s was vaporized",
   "death.attack.sun.player": "%1$s was vaporized whilst fighting %2$s",
